# commashell

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  meson.build  meson_options.txt  settings
data/: in.wobbl.commashell.desktop.in.in  in.wobbl.commashell.gschema.in.xml  in.wobbl.commashell.gschema.xml  in.wobbl.commashell.metainfo.xml  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml.in  style.css
data/resources/ui/: app-entry.blp  launcher.blp  meson.build  notification.blp  notifications.blp  right.blp  shell.blp  top.blp  window.blp
src/: app.rs  cava.rs  config.rs.in  main.rs  meson.build
src/app_entry/: imp.rs  mod.rs
src/launcher/: imp.rs  launchers.rs  mod.rs
src/notification/: imp.rs  mod.rs
src/notifications/: imp.rs  mod.rs
src/right/: imp.rs  mod.rs
src/shell/: imp.rs  mod.rs
src/top/: imp.rs  mod.rs  weather.rs
src/window/: imp.rs  mod.rs
